--- a/anonovo/index.html
+++ b/anonovo/index.html
@@ -322,7 +322,7 @@ a.botao{
 </style>
 <div class="headline-1660149216475ApvS0L-element headline">
 <h1>
-<a class="botao link1" href="https://pay.kiwify.com.br/GI9lIxH">COMPRAR AGORA</a>
+<a class="botao link1" href="https://pay.kiwify.com.br/bEohONS">COMPRAR AGORA</a>
 </h1>
 </div>
 </div>
