--- a/anonovo/index.html
+++ b/anonovo/index.html
@@ -120,7 +120,7 @@ margin-left:auto;margin-right:auto;
 }
 </style>
 <div class="headline_topo">
-<h1 class="headline_vsl_texto">FOI 15 KG EMBORA COM ESSE NOVO PROTOCOLO DO ANO</h1>
+<h1 class="headline_vsl_texto">FOI 15 KG EMBORA COM ESSE PROTOCOLO DO ANO NOVO</h1>
 </div>
 </div>
 
