--- a/anonovo/index.html
+++ b/anonovo/index.html
@@ -82,7 +82,7 @@ text-align: center;
 }
 </style>
 <div class="headline-1660141877348JxPPzg-element headline">
-<h1 class="texto_topo_vsl">Receita Nova de 2024</h1>
+<h1 class="texto_topo_vsl">Milhares de mulheres estão transformando sua vida...</h1>
 </div>
 </div>
 </div>
