--- a/matheus/index.html
+++ b/matheus/index.html
@@ -229,7 +229,7 @@ text-align: center;
 </div>
 </div>
 
-<div class="division-1660149184738__wrapper" id="botao" atraso="7200000" style="">
+<div class="division-1660149184738__wrapper" id="botao" atraso="720000" style="">
 <style>
 #division-1660149184738 {
 position: relative;
